--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,9 @@
 {
   "name": "rsslookup",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "htmlparser2": "^8.0.1",
-    "node-fetch": "^2.6.7"
+      "@google-cloud/functions-framework": "^2.1.0",
+      "htmlparser2": "^8.0.1",
+      "node-fetch": "^2.6.7"
   }
 }
