--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.3.0",
     "next": "12.1.6",
     "next-seo": "^5.4.0",
     "react": "18.1.0",
