--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,18 @@
 {
   "name": "rsslookup",
   "version": "1.0.0",
+  "description": "A free tool to find RSS feed for any website.",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "mratmeyer",
   "dependencies": {
-      "@google-cloud/functions-framework": "^2.1.0",
-      "hcaptcha": "^0.1.1",
-      "htmlparser2": "^8.0.1",
-      "node-fetch": "^2.6.7"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "hcaptcha": "^0.1.1",
+    "htmlparser2": "^8.0.1",
+    "node-fetch": "^2.6.7"
   }
 }
