Change directory in Github Action

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -9,4 +9,5 @@ jobs:
       steps:
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions/setup-flyctl@master
+        - run: cd backend/
         - run: flyctl deploy --remote-only
