--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -9,5 +9,4 @@ jobs:
       steps:
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions/setup-flyctl@master
-        - run: cd backend/
-        - run: flyctl deploy --remote-only
+        - run: flyctl deploy --remote-only --config ./backend/fly.toml
