--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -9,4 +9,4 @@ jobs:
       steps:
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions/setup-flyctl@master
-        - run: flyctl deploy --remote-only --config ./backend/fly.toml --dockerfile ./backend/Dockerfile
+        - run: flyctl deploy ./backend --remote-only
