--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "next": "12.1.6",
     "next-seo": "^5.4.0",
     "react": "18.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
