--- a/rsslookup-api/package.json
+++ b/rsslookup-api/package.json
@@ -12,6 +12,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
-    "htmlparser2": "^8.0.1"
+    "htmlparser2": "^8.0.1",
+    "toucan-js": "^2.6.1"
   }
 }
