--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.3.0",
@@ -20,7 +21,9 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^10.1.1",
     "postcss": "^8.4.8",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.0.23"
   }
 }
