--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-seo": "^6.4.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
