--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.3.0",
+    "@marsidev/react-turnstile": "^1.1.0",
     "next": "14.0.4",
     "next-seo": "^6.4.0",
     "react": "18.2.0",
