--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
     "@marsidev/react-turnstile": "^1.1.0",
+    "@opennextjs/cloudflare": "^1.14.0",
     "htmlparser2": "^8.0.1",
-    "next": "14.0.4",
+    "next": "14.2",
     "next-seo": "^6.4.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -26,6 +30,7 @@
     "eslint-config-prettier": "^10.1.1",
     "postcss": "^8.4.8",
     "prettier": "^3.5.3",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "wrangler": "^4.51.0"
   }
 }
