--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,9 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
+# build output
+/dist
+/.output
 
 # misc
 .DS_Store
@@ -25,10 +22,15 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# vercel
-.vercel
-
 # cloudflare
-.open-next
 .wrangler
-cloudflare-env.d.ts
+
+# tanstack start / vite
+*.timestamp*.js
+.vinxi
+
+# environment files
+.env
+.env.local
+.env.production
+.env*.local
