--- a/package.json
+++ b/package.json
@@ -1,36 +1,42 @@
 {
   "name": "rsslookup",
   "version": "1.5.0",
+  "type": "module",
   "description": "A free tool to find the RSS feed for any website.",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint src/",
     "format": "prettier --write .",
     "test": "vitest",
-    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "deploy": "NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY=0x4AAAAAABDQq80FHjTvJcsr opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+    "deploy": "vite build && wrangler deploy"
   },
   "dependencies": {
+    "@cloudflare/vite-plugin": "^1.17.0",
     "@marsidev/react-turnstile": "^1.3.1",
-    "@opennextjs/cloudflare": "^1.14.4",
+    "@tanstack/react-router": "^1.120.5",
+    "@tanstack/react-start": "^1.120.5",
+    "@vitejs/plugin-react": "^5.1.1",
+    "dotenv": "^17.2.3",
     "htmlparser2": "^10.0.0",
-    "next": "15.5.7",
-    "next-seo": "^6.4.0",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "react-hot-toast": "^2.6.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
+    "vinxi": "^0.5.3"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250124.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.2",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^10.1.1",
     "postcss": "^8.4.8",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.0.23",
+    "typescript": "^5.7.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.14",
     "wrangler": "^4.51.0"
   }
