--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "types": ["vite/client", "@cloudflare/workers-types", "node"],
     "paths": {
       "~/*": ["./src/*"]
     }
