--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ yarn-error.log*
 # tanstack start / vite
 *.timestamp*.js
 .vinxi
+
+# environment files
+.env
+.env.local
+.env.production
+.env*.local
