add rate limiting

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,3 @@
-VITE_CLOUDFLARE_TURNSTILE_SITE_KEY=1x00000000000000000000AA
-CLOUDFLARE_TURNSTILE_SECRET=1x0000000000000000000000000000000AA
+# Upstash Redis (for rate limiting)
+UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your-token
