--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^3.0.23",
     "typescript": "^5.7.0",
+    "typescript-eslint": "^8.54.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.14",
     "wrangler": "^4.56.0"
